added UI mockup

--- a/BlogEngine/BlogEngine/Client/_Imports.razor
+++ b/BlogEngine/BlogEngine/Client/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.JSInterop
 @using BlogEngine.Client
 @using BlogEngine.Client.Shared
+@using BlogEngine.Client.Shared.Blog
+@using BlogEngine.Shared.Models
+@using BlogEngine.Shared.Models.JoiningModels
