--- a/BlogEngine/BlogEngine/Client/Shared/MainLayout.razor
+++ b/BlogEngine/BlogEngine/Client/Shared/MainLayout.razor
@@ -1,11 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
-    </div>
+<Navigation />
 
-    <div class="content px-4">
-        @Body
-    </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div>
+    @Body
 </div>
