Updated project structure, added http service

--- a/BlogEngine/BlogEngine/Client/Pages/Blog/BlogArticles.razor
+++ b/BlogEngine/BlogEngine/Client/Pages/Blog/BlogArticles.razor
@@ -3,7 +3,7 @@
 <BlogArticleList Blogs="Blogs" />
 
 @code {
-    public List<Blog> Blogs { get; set; }
+    public List<BlogModel> Blogs { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
