--- a/BlogEngine/BlogEngine/Client/Shared/Blog/BlogArticleList.razor
+++ b/BlogEngine/BlogEngine/Client/Shared/Blog/BlogArticleList.razor
@@ -26,5 +26,5 @@
 </GenericList>
 
 @code {
-    [Parameter] public List<Blog> Blogs { get; set; }
+    [Parameter] public List<BlogModel> Blogs { get; set; }
 }
