--- a/BlogEngine/BlogEngine.Client/Shared/GenericList.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/GenericList.razor
@@ -8,7 +8,7 @@
     }
     else
     {
-        <p>Loading</p>
+        <TextCenter Text="Loading..." />
     }
 }
 else if (Collection.Count == 0)
@@ -19,7 +19,7 @@ else if (Collection.Count == 0)
     }
     else
     {
-        <p>There are no records to show</p>
+        <TextCenter Text="There are no records to show" />
     }
 }
 else
@@ -37,7 +37,7 @@ else
     }
     else
     {
-        <p>Something went wrong</p>
+        <TextCenter Text="Something went wrong" />
     }
 }
 
