--- a/BlogEngine/BlogEngine.Client/Shared/MainLayout.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/MainLayout.razor
@@ -11,3 +11,18 @@
 <div>
     @Body
 </div>
+
+@* TODO: add footer <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <footer class="bg-dark py-5 position-absolute align-bottom">
+        <div class="container">
+            <h5 class="text-center text-light m-0">
+                Copyright ©2020 All rights reserved.
+                This site made with Blazor by beso genebashvili.
+            </h5>
+        </div>
+    </footer>*@
