--- a/BlogEngine/BlogEngine.Client/App.razor
+++ b/BlogEngine/BlogEngine.Client/App.razor
@@ -1,10 +1,10 @@
-<Router AppAssembly="@typeof(Program).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <TextCenter Text="Sorry, there's nothing at this address."/>
         </LayoutView>
     </NotFound>
 </Router>
