--- a/BlogEngine/BlogEngine.Client/Pages/Error.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Error.razor
@@ -1,23 +1,11 @@
-﻿@page
-@model BlogEngine.Server.Pages.ErrorModel
-@{
-    Layout = "_Layout";
-    ViewData["Title"] = "Error";
-}
+﻿@page "/error"
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
 <h3>Development Mode</h3>
 <p>
-    Swapping to the <strong>Development</strong> environment displays detailed information about the error that occurred.
+    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
 </p>
 <p>
     <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
