--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -1,7 +1,7 @@
 ﻿<!-- navigation -->
 <nav class="navbar b-navbar fixed-top navbar-expand-sm navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand b-navbar-brand" href="index.html">Blog.</a>
+        <a class="navbar-brand b-navbar-brand" href="/">Blog.</a>
 
         <button class="navbar-toggler b-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,10 +12,13 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link b-nav-link mr-4" href="index.html">Home</a>
+                    <a class="nav-link b-nav-link mr-4" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link b-nav-link mr-4" href="blog/articles">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link b-nav-link mr-4" href="blog/create">Create Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link b-nav-link mr-4" href="#">About</a>
