--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -1,11 +1,17 @@
 ﻿@using System.Net.Http
-@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlogEngine.Client
 @using BlogEngine.Client.Shared
 @using BlogEngine.Client.Shared.Blog
 @using BlogEngine.Shared.Models
+@using Blazor.FileReader
+@using System.IO
+@using Syncfusion.Blazor.Spinner
+@using Syncfusion.Blazor.Inputs
+@using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.RichTextEditor
