--- a/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
+++ b/BlogEngine/BlogEngine.Client/wwwroot/css/main.css
@@ -1,20 +1,26 @@
 body {
-  font-family: "Poppins", Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f8f9fa;
-  font-size: 1rem;
-  line-height: 1.8;
-  font-weight: 400;
-  color: gray;
+    font-family: "Poppins", Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f9fa;
+    font-size: 1rem;
+    line-height: 1.8;
+    font-weight: 400;
+    color: gray;
 }
 
+/*
 br {
-  visibility: hidden;
+    visibility: hidden;
 }
+
+p br {
+    visibility: visible;
+}
+*/
 
 a {
-  text-decoration: none !important;
+    text-decoration: none !important;
 }
 
 .validation-message {
@@ -24,133 +30,171 @@ a {
 /* navigation */
 
 .b-navbar {
-  background-color: #ffffff !important;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffffff !important;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .b-navbar-brand {
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 2;
-  /* color: #fbd46d !important; */
-  /* color: #eebb4d !important; */
-  color: #ffd36a !important;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 2;
+    /* color: #fbd46d !important; */
+    /* color: #eebb4d !important; */
+    color: #ffd36a !important;
 }
 
 .b-toggler {
-  border: none;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 1rem;
+    border: none;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: 1rem;
 }
 
-.b-toggler:focus {
-  border: none;
-  outline: none;
-}
+    .b-toggler:focus {
+        border: none;
+        outline: none;
+    }
 
 .b-nav-link {
-  font-size: 1.1rem;
-  color: #252525 !important;
+    font-size: 1.1rem;
+    color: #252525 !important;
 }
 
-.b-nav-link:active,
-.b-nav-link:hover {
-  color: #ffd369 !important;
-}
+    .b-nav-link:active,
+    .b-nav-link:hover {
+        color: #ffd369 !important;
+    }
 
 /* blog article section */
 
 .blog-entry {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .topper {
-  margin-top: -60px;
-  position: absolute;
-  top: 0;
-  left: 20px;
-  background: #ffd369;
+    margin-top: -60px;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    background: #ffd369;
 }
 
-.topper::after {
-  position: absolute;
-  bottom: -10px;
-  left: 40px;
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 10px 10px 0 10px;
-  border-color: #ffd369 transparent transparent transparent;
-}
+    .topper::after {
+        position: absolute;
+        bottom: -10px;
+        left: 40px;
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 10px 10px 0 10px;
+        border-color: #ffd369 transparent transparent transparent;
+    }
 
 .day-wrapper {
-  width: 70px;
+    width: 70px;
 }
 
 .day {
-  font-size: 2.75rem;
-  font-weight: 300;
-  color: #252525;
-  line-height: 1;
+    font-size: 2.75rem;
+    font-weight: 300;
+    color: #252525;
+    line-height: 1;
 }
 
 .date-wrapper {
-  width: calc(100% - 70px);
+    width: calc(100% - 70px);
 }
 
 .date {
-  font-size: 0.8125rem;
-  line-height: 1.6;
-  display: block;
-  color: #252525;
+    font-size: 0.8125rem;
+    line-height: 1.6;
+    display: block;
+    color: #252525;
 }
 
 .blog-entry:hover .blog-text .blog-heading a {
-  color: rgba(0, 0, 0, 0.5);
-  transition: all 0.4s;
+    color: rgba(0, 0, 0, 0.5);
+    transition: all 0.4s;
 }
 
 .blog-entry:hover .read-more-btn {
-  color: #252525;
-  transition: all 0.4s;
+    color: #252525;
+    transition: all 0.4s;
 }
 
 .block-20 {
-  overflow: hidden;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 400px;
-  border-radius: 4px;
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 400px;
+    border-radius: 4px;
 }
 
 .blog-text {
-  position: relative;
-  width: 100%;
-  margin: 0 auto;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .blog-heading a {
-  font-size: 1.5rem;
-  font-weight: 800;
-  color: #252525;
-  transition: all 0.4s;
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #252525;
+    transition: all 0.4s;
 }
 
 .read-more-btn {
-  color: rgba(0, 0, 0, 0.4);
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-  transition: all 0.4s;
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    transition: all 0.4s;
 }
 
 /* footer */
 
 footer {
-  background-color: #222831;
+    background-color: #222831;
 }
+
+/* input image */
+.file-input-wrapper {
+    border: 1px solid;
+    display: inline-block;
+}
+
+.file-input:focus {
+    outline: 0 !important;
+}
+
+.file-input-button::-webkit-file-upload-button {
+    /*    border-radius: 0 !important;*/
+}
+
+.file-input-image {
+    width: 100px;
+    height: 80px;
+    object-fit: cover;
+}
+
+.delete-btn {
+    cursor: pointer;
+}
+
+/* blog form */
+
+.form-font-size {
+    font-size: 14px;
+}
+
+.form-border {
+    border-color: #c8c8c8;
+}
+
+    .form-border:hover {
+        border-color: #333;
+    }
