--- a/BlogEngine/BlogEngine.Client/Shared/Blog/IndividualBlogArticle.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Blog/IndividualBlogArticle.razor
@@ -1,5 +1,5 @@
 ﻿<div class="blog-entry">
-    <a href="" class="block-20"
+    <a href="blog/view/@Blog.ID/@Blog.Title" class="block-20"
        style="background-image: url('https://icatcare.org/app/uploads/2018/06/Layer-1704-1920x840.jpg');"></a>
     <div class="blog-text p-4 float-right d-block">
 
@@ -14,11 +14,11 @@
         </div>
 
         <h3 class="blog-heading mb-3">
-            <a href="">@Blog.Title</a>
+            <a href="blog/view/@Blog.ID/@Blog.Title">@Blog.Title</a>
         </h3>
         <p>@Blog.ShortDescription</p>
         <p>
-            <a href="" class="read-more-btn">
+            <a href="blog/view/@Blog.ID/@Blog.Title" class="read-more-btn">
                 <span style="font-size: 20px;">→</span>
                 READ MORE
             </a>
