--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -16,3 +16,6 @@
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.RichTextEditor
 @using BlogEngine.ClientServices.Services.Implementations
+@using BlogEngine.ClientServices.Services.Abstractions
+
+@using BlogEngine.Shared 
