--- a/BlogEngine/BlogEngine.Client/Pages/Index.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Index.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+@inject IHttpService HttpService
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
 
 <Syncfusion.Blazor.Calendars.SfCalendar TValue="DateTime?" />
+
+<br />
