Configured and created DB, modified Generic Repository and Moved ReadingTimeEstimator into Server

--- a/BlogEngine/BlogEngine.Client/Pages/Blog/BlogArticles.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/BlogArticles.razor
@@ -1,7 +1,13 @@
 ﻿@page "/blog/articles"
+@inject IBlogService BlogService
 
 <BlogArticleList Blogs="Blogs" />
 
 @code {
     public List<BlogModel> Blogs { get; set; }
+
+    protected async override Task OnInitializedAsync()
+    {
+        Blogs = await BlogService.GetBlogsAsync();
+    }
 }
