--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -21,6 +21,9 @@
                     <a class="nav-link b-nav-link mr-4" href="blog/create">Create Blog</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link b-nav-link mr-4" href="blog/manage">Manage Blogs</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link b-nav-link mr-4" href="#">About</a>
                 </li>
                 <li class="nav-item">
