--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -15,6 +15,8 @@
 @using Syncfusion.Blazor.Inputs
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.RichTextEditor
+@using Syncfusion.Blazor.Grids
 @using BlogEngine.ClientServices.Services.Implementations
 @using BlogEngine.ClientServices.Services.Abstractions
-@using BlogEngine.Shared 
+@using BlogEngine.Shared
+@using Syncfusion.Blazor.Popups
