Added Blog Entity Creation and Update DTO-s

--- a/BlogEngine/BlogEngine.Client/Pages/Blog/BlogArticles.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/BlogArticles.razor
@@ -1,13 +1,13 @@
 ﻿@page "/blog/articles"
 @inject IBlogService BlogService
 
-<BlogArticleList Blogs="Blogs" />
+<BlogArticleList BlogDTOs="_blogDTOs" />
 
 @code {
-    public List<BlogModel> Blogs { get; set; }
+    private List<BlogDTO> _blogDTOs { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
-        Blogs = await BlogService.GetBlogsAsync();
+        _blogDTOs = await BlogService.GetBlogsAsync();
     }
 }
