--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -8,7 +8,7 @@
 @using BlogEngine.Client
 @using BlogEngine.Client.Shared
 @using BlogEngine.Client.Shared.Blog
-@using BlogEngine.Shared.Models
+@using BlogEngine.Shared.DTOs
 @using Blazor.FileReader
 @using System.IO
 @using Syncfusion.Blazor.Spinner
