--- a/BlogEngine/BlogEngine.Client/Pages/Blog/ViewBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/ViewBlog.razor
@@ -1,6 +1,6 @@
 ﻿@page "/blog/view/{ID:int}"
 @page "/blog/view/{ID:int}/{Title}"
-@inject IBlogService BlogService
+@inject IBlogClient BlogClient
 
 @if (_blogDTO == null)
 {
@@ -25,6 +25,6 @@ else
 
     protected async override Task OnInitializedAsync()
     {
-        _blogDTO = await BlogService.GetBlogAsync(ID);
+        _blogDTO = await BlogClient.GetAsync(ID);
     }
 }
